wandelscript/wandelscript/grammar/wandelscriptParser.py
# Generated from wandelscriptParser.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class wandelscriptParser ( Parser ):

    grammarFileName = "wandelscriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'",
                     "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", "'+'",
                     "'-'", "'*'", "'/'", "'|'", "'~'", "'<'", "'>'", "'='",
                     "'::'", "'=='", "'!='", "'<='", "'>='", "'..'", "'...'",
                     "'move'", "'via'", "'to'", "'movedef'", "'>-->'", "'def'",
                     "'return'", "'pass'", "'if'", "'elif'", "'else:'",
                     "'switch'", "'case'", "'default:'", "'with'", "'for'",
                     "'in'", "'repeat'", "'while'", "'break'", "'stop'",
                     "'not'", "'and'", "'or'", "'do'", "'sync'", "'except'",
                     "'interrupt'", "'when'", "<INVALID>", "'wait'", "'raise'",
                     "'print'", "'read'", "'write'", "'call'", "'True'",
                     "'False'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "OPEN_PARENS", "CLOSE_PARENS",
                      "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_BRACE", "CLOSE_BRACE",
                      "DOT", "COMMA", "COLON", "PLUS", "MINUS", "STAR",
                      "DIV", "BITWISE_OR", "TILDE", "LT", "GT", "OP_ASSIGNMENT",
                      "DOUBLE_COLON", "OP_EQ", "OP_NE", "OP_LE", "OP_GE",
                      "OP_RANGE", "ORIENTATION_ELLIPSIS", "MOVE", "VIA",
                      "TO", "MOVEDEF", "MOVEDEV_ARROW", "DEF", "RETURN",
                      "PASS", "IF", "ELIF", "ELSE", "SWITCH", "CASE", "DEFAULT",
                      "WITH", "FOR", "IN", "REPEAT", "WHILE", "BREAK", "STOP",
                      "NOT", "AND", "OR", "DO", "SYNC", "EXCEPT", "INTERRUPT",
                      "WHEN", "ACTIVATE_OR_DEACTIVATE", "WAIT", "RAISE",
                      "PRINT", "READ", "WRITE", "CALL", "TRUE", "FALSE",
                      "INT", "FLOAT", "STRING", "NAME", "NEWLINE", "SKIP_" ]

    RULE_program = 0
    RULE_identifier = 1
    RULE_suite = 2
    RULE_statement = 3
    RULE_simpleStatement = 4
    RULE_break_ = 5
    RULE_return_ = 6
    RULE_stop = 7
    RULE_pass_ = 8
    RULE_motion = 9
    RULE_switchInterrupt = 10
    RULE_wait = 11
    RULE_raiseException = 12
    RULE_complexStatement = 13
    RULE_whileLoop = 14
    RULE_functionDefinition = 15
    RULE_moveDefinition = 16
    RULE_forLoop = 17
    RULE_range_ = 18
    RULE_repeatLoop = 19
    RULE_conditional = 20
    RULE_switch_ = 21
    RULE_interrupt = 22
    RULE_context = 23
    RULE_syncContext = 24
    RULE_robotContext = 25
    RULE_unaryOperator = 26
    RULE_expression = 27
    RULE_atom = 28
    RULE_unary = 29
    RULE_functionCall = 30
    RULE_assignment = 31
    RULE_frameRelation = 32
    RULE_reference = 33
    RULE_float_ = 34
    RULE_integer = 35
    RULE_bool_ = 36
    RULE_array = 37
    RULE_keyValuePair = 38
    RULE_record = 39
    RULE_pose = 40
    RULE_position = 41
    RULE_orientation = 42
    RULE_vector = 43
    RULE_string = 44
    RULE_connector = 45
    RULE_print_ = 46
    RULE_read = 47
    RULE_write = 48
    RULE_call = 49
    RULE_identifierList = 50
    RULE_modifier = 51
    RULE_expressionList = 52
    RULE_additionOperator = 53
    RULE_sign = 54
    RULE_inverse = 55
    RULE_not = 56
    RULE_multiplicationOperator = 57
    RULE_comparisonOperator = 58
    RULE_logicalOperator = 59

    ruleNames =  [ "program", "identifier", "suite", "statement", "simpleStatement",
                   "break_", "return_", "stop", "pass_", "motion", "switchInterrupt",
                   "wait", "raiseException", "complexStatement", "whileLoop",
                   "functionDefinition", "moveDefinition", "forLoop", "range_",
                   "repeatLoop", "conditional", "switch_", "interrupt",
                   "context", "syncContext", "robotContext", "unaryOperator",
                   "expression", "atom", "unary", "functionCall", "assignment",
                   "frameRelation", "reference", "float_", "integer", "bool_",
                   "array", "keyValuePair", "record", "pose", "position",
                   "orientation", "vector", "string", "connector", "print_",
                   "read", "write", "call", "identifierList", "modifier",
                   "expressionList", "additionOperator", "sign", "inverse",
                   "not", "multiplicationOperator", "comparisonOperator",
                   "logicalOperator" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    OPEN_PARENS=3
    CLOSE_PARENS=4
    OPEN_BRACKET=5
    CLOSE_BRACKET=6
    OPEN_BRACE=7
    CLOSE_BRACE=8
    DOT=9
    COMMA=10
    COLON=11
    PLUS=12
    MINUS=13
    STAR=14
    DIV=15
    BITWISE_OR=16
    TILDE=17
    LT=18
    GT=19
    OP_ASSIGNMENT=20
    DOUBLE_COLON=21
    OP_EQ=22
    OP_NE=23
    OP_LE=24
    OP_GE=25
    OP_RANGE=26
    ORIENTATION_ELLIPSIS=27
    MOVE=28
    VIA=29
    TO=30
    MOVEDEF=31
    MOVEDEV_ARROW=32
    DEF=33
    RETURN=34
    PASS=35
    IF=36
    ELIF=37
    ELSE=38
    SWITCH=39
    CASE=40
    DEFAULT=41
    WITH=42
    FOR=43
    IN=44
    REPEAT=45
    WHILE=46
    BREAK=47
    STOP=48
    NOT=49
    AND=50
    OR=51
    DO=52
    SYNC=53
    EXCEPT=54
    INTERRUPT=55
    WHEN=56
    ACTIVATE_OR_DEACTIVATE=57
    WAIT=58
    RAISE=59
    PRINT=60
    READ=61
    WRITE=62
    CALL=63
    TRUE=64
    FALSE=65
    INT=66
    FLOAT=67
    STRING=68
    NAME=69
    NEWLINE=70
    SKIP_=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(wandelscriptParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(wandelscriptParser.NEWLINE)
            else:
                return self.getToken(wandelscriptParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wandelscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(wandelscriptParser.StatementContext,i)


        def getRuleIndex(self):
            return wandelscriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = wandelscriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -2399876960646856672) != 0) or _la==69 or _la==70:
                self.state = 122
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [70]:
                    self.state = 120
                    self.match(wandelscriptParser.NEWLINE)
                    pass
                elif token in [5, 28, 31, 33, 34, 35, 36, 39, 42, 43, 45, 46, 47, 48, 52, 53, 55, 57, 58, 59, 60, 62, 63, 69]:
                    self.state = 121
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(wandelscriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(wandelscriptParser.NAME, 0)

        def getRuleIndex(self):
            return wandelscriptParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = wandelscriptParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(wandelscriptParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wandelscriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(wandelscriptParser.StatementContext,i)


        def NEWLINE(self):
            return self.getToken(wandelscriptParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(wandelscriptParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(wandelscriptParser.DEDENT, 0)

        def getRuleIndex(self):
            return wandelscriptParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuite" ):
                return visitor.visitSuite(self)
            else:
                return visitor.visitChildren(self)




    def suite(self):

        localctx = wandelscriptParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 28, 31, 33, 34, 35, 36, 39, 42, 43, 45, 46, 47, 48, 52, 53, 55, 57, 58, 59, 60, 62, 63, 69]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.statement()
                pass
            elif token in [70]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(wandelscriptParser.NEWLINE)
                self.state = 133
                self.match(wandelscriptParser.INDENT)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 134
                    self.statement()
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -2399876960646856672) != 0) or _la==69):
                        break

                self.state = 139
                self.match(wandelscriptParser.DEDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleStatement(self):
            return self.getTypedRuleContext(wandelscriptParser.SimpleStatementContext,0)


        def NEWLINE(self):
            return self.getToken(wandelscriptParser.NEWLINE, 0)

        def complexStatement(self):
            return self.getTypedRuleContext(wandelscriptParser.ComplexStatementContext,0)


        def getRuleIndex(self):
            return wandelscriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = wandelscriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 28, 34, 35, 47, 48, 57, 58, 59, 60, 62, 63, 69]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.simpleStatement()
                self.state = 144
                self.match(wandelscriptParser.NEWLINE)
                pass
            elif token in [31, 33, 36, 39, 42, 43, 45, 46, 52, 53, 55]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.complexStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def print_(self):
            return self.getTypedRuleContext(wandelscriptParser.Print_Context,0)


        def stop(self):
            return self.getTypedRuleContext(wandelscriptParser.StopContext,0)


        def wait(self):
            return self.getTypedRuleContext(wandelscriptParser.WaitContext,0)


        def motion(self):
            return self.getTypedRuleContext(wandelscriptParser.MotionContext,0)


        def write(self):
            return self.getTypedRuleContext(wandelscriptParser.WriteContext,0)


        def call(self):
            return self.getTypedRuleContext(wandelscriptParser.CallContext,0)


        def break_(self):
            return self.getTypedRuleContext(wandelscriptParser.Break_Context,0)


        def return_(self):
            return self.getTypedRuleContext(wandelscriptParser.Return_Context,0)


        def functionCall(self):
            return self.getTypedRuleContext(wandelscriptParser.FunctionCallContext,0)


        def assignment(self):
            return self.getTypedRuleContext(wandelscriptParser.AssignmentContext,0)


        def raiseException(self):
            return self.getTypedRuleContext(wandelscriptParser.RaiseExceptionContext,0)


        def pass_(self):
            return self.getTypedRuleContext(wandelscriptParser.Pass_Context,0)


        def switchInterrupt(self):
            return self.getTypedRuleContext(wandelscriptParser.SwitchInterruptContext,0)


        def getRuleIndex(self):
            return wandelscriptParser.RULE_simpleStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleStatement" ):
                listener.enterSimpleStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleStatement" ):
                listener.exitSimpleStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleStatement" ):
                return visitor.visitSimpleStatement(self)
            else:
                return visitor.visitChildren(self)




    def simpleStatement(self):

        localctx = wandelscriptParser.SimpleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simpleStatement)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.print_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.stop()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.wait()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.motion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 153
                self.write()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 154
                self.call()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 155
                self.break_()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 156
                self.return_()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 157
                self.functionCall()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 158
                self.assignment()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 159
                self.raiseException()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 160
                self.pass_()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 161
                self.switchInterrupt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(wandelscriptParser.BREAK, 0)

        def getRuleIndex(self):
            return wandelscriptParser.RULE_break_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_" ):
                listener.enterBreak_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_" ):
                listener.exitBreak_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_" ):
                return visitor.visitBreak_(self)
            else:
                return visitor.visitChildren(self)




    def break_(self):

        localctx = wandelscriptParser.Break_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_break_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(wandelscriptParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None # ExpressionContext

        def RETURN(self):
            return self.getToken(wandelscriptParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(wandelscriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return wandelscriptParser.RULE_return_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_" ):
                listener.enterReturn_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_" ):
                listener.exitReturn_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_" ):
                return visitor.visitReturn_(self)
            else:
                return visitor.visitChildren(self)




    def return_(self):

        localctx = wandelscriptParser.Return_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(wandelscriptParser.RETURN)
            self.state = 167
            localctx.result = self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STOP(self):
            return self.getToken(wandelscriptParser.STOP, 0)

        def getRuleIndex(self):
            return wandelscriptParser.RULE_stop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStop" ):
                listener.enterStop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStop" ):
                listener.exitStop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStop" ):
                return visitor.visitStop(self)
            else:
                return visitor.visitChildren(self)




    def stop(self):

        localctx = wandelscriptParser.StopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(wandelscriptParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pass_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PASS(self):
            return self.getToken(wandelscriptParser.PASS, 0)

        def getRuleIndex(self):
            return wandelscriptParser.RULE_pass_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPass_" ):
                listener.enterPass_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPass_" ):
                listener.exitPass_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPass_" ):
                return visitor.visitPass_(self)
            else:
                return visitor.visitChildren(self)




    def pass_(self):

        localctx = wandelscriptParser.Pass_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pass_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(wandelscriptParser.PASS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MotionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.frame_relation = None # FrameRelationContext
            self.tcp = None # ExpressionContext
            self.via = None # ConnectorContext
            self.end = None # ExpressionContext

        def MOVE(self):
            return self.getToken(wandelscriptParser.MOVE, 0)

        def TO(self):
            return self.getToken(wandelscriptParser.TO, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wandelscriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(wandelscriptParser.ExpressionContext,i)


        def VIA(self):
            return self.getToken(wandelscriptParser.VIA, 0)

        def WITH(self):
            return self.getToken(wandelscriptParser.WITH, 0)

        def modifier(self):
            return self.getTypedRuleContext(wandelscriptParser.ModifierContext,0)


        def frameRelation(self):
            return self.getTypedRuleContext(wandelscriptParser.FrameRelationContext,0)


        def connector(self):
            return self.getTypedRuleContext(wandelscriptParser.ConnectorContext,0)


        def getRuleIndex(self):
            return wandelscriptParser.RULE_motion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMotion" ):
                listener.enterMotion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMotion" ):
                listener.exitMotion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMotion" ):
                return visitor.visitMotion(self)
            else:
                return visitor.visitChildren(self)




    def motion(self):

        localctx = wandelscriptParser.MotionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_motion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(wandelscriptParser.MOVE)
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 174
                localctx.frame_relation = self.frameRelation()

            elif la_ == 2:
                self.state = 175
                localctx.tcp = self.expression(0)


            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 178
                self.match(wandelscriptParser.VIA)
                self.state = 179
                localctx.via = self.connector()


            self.state = 182
            self.match(wandelscriptParser.TO)
            self.state = 183
            localctx.end = self.expression(0)
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 184
                self.match(wandelscriptParser.WITH)
                self.state = 185
                self.modifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchInterruptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.action = None # Token
            self.name = None # IdentifierContext

        def ACTIVATE_OR_DEACTIVATE(self):
            return self.getToken(wandelscriptParser.ACTIVATE_OR_DEACTIVATE, 0)

        def identifier(self):
            return self.getTypedRuleContext(wandelscriptParser.IdentifierContext,0)


        def getRuleIndex(self):
            return wandelscriptParser.RULE_switchInterrupt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchInterrupt" ):
                listener.enterSwitchInterrupt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchInterrupt" ):
                listener.exitSwitchInterrupt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchInterrupt" ):
                return visitor.visitSwitchInterrupt(self)
            else:
                return visitor.visitChildren(self)




    def switchInterrupt(self):

        localctx = wandelscriptParser.SwitchInterruptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_switchInterrupt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            localctx.action = self.match(wandelscriptParser.ACTIVATE_OR_DEACTIVATE)
            self.state = 189
            localctx.name = self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WaitContext(ParserRuleContext):
        __slots__ = 'parser'
